# IMDBKit

./: DISCLAIMER.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
example/: akas_trivia_reviews.py  all_episodes.py  custom_user_agent.py  filmography.py  genres_interests.py  localization.py  movie_details.py  person_details.py  quick_start.py  search_keywords.py  season_episodes.py
imdbkit/: __init__.py  api.py  challenge_solver.py  converters.py  data_parsing.py  device_profile.py  i18n.py  protection.py  security.py  structs.py
tests/: test_api.py  test_awards.py  test_class_usage.py  test_field_defaults.py  test_functions.py  test_locale.py  test_models.py  test_parsers.py  test_services.py  test_user_agent.py
tests/sample_json_source/: sample_person.json  sample_resource.json  sample_search.json
