[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "imdbkit"
version = "1.0.0"
description = "A robust Python library for scraping and retrieving detailed information about movies, TV series, and celebrities from IMDb."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "SilentXBotz" }
]
dependencies = [
    "niquests",
    "lxml>=5.3.0",
    "pydantic",
    "jmespath",
    "deprecated",
    "curl_cffi",
    "cryptography"
]


urls = { Homepage = "https://github.com/NBBotz/IMDBKit" }

keywords = [
    "movie",
    "information",
    "data"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
[project.optional-dependencies]

dev = [
    "pytest>=7.0",
    "mypy",
    "ruff",
    "black",
]

build = [
    "build",
    "twine",
]

test = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["imdbkit"]

[tool.setuptools.package-data]
"sample_json_source" = ["*"]
