[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "imdbkit"
version = "2.0.3"
description = "A robust Python library for retrieving detailed information about movies, TV series, and celebrities from IMDb."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "SilentXBotz" }
]

dependencies = [
    "niquests>=3.18.1",
    "lxml>=5.3.0",
    "pydantic>=2.12.0",
    "jmespath>=1.1.0",
    "deprecated>=1.3.1",
    "curl_cffi>=0.14.0",
    "cryptography>=44.0.0",
]


urls = { Homepage = "https://github.com/NBBotz/IMDBKit" }

keywords = [
    "imdb",
    "movie",
    "information",
    "data"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]

dev = [
    "pytest>=7.0",
    "mypy",
    "ruff",
    "black",
]

build = [
    "build",
    "twine",
]

test = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["imdbkit"]

[tool.setuptools.package-data]
"sample_json_source" = ["*"]
